# $Id$
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* More schema compatibility defensive coding.  Comment out all SET commands in the schema
	
2007-07-22 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php:  Fix #215

2007-07-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* AnonymisedDataExport.php:  Work around the huge memory requirements this report used to have.
	* install.php:  Strip create procedural language from schema, that requires superuser anyway.
					Strip a few other things to hopefully allow it to work again with postgresql 7.4, but I need the full output of the commant "psql -f wifidog-postgres-schema.sql", run from the sql directory of a svn checkout, from someone still running 7.4, otherwise I can't do much. 
	* DependenciesList.php:  New class.  Allow seeing the dependency list once the server is installed.  A small step towards centralized dependency installation.

2007-07-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* At long last, implement #9:  Automatic new node creation.  When attempting to login from an unknown node, the user (if he has the permissions) will be prompted to create the node, or "steal" en existing one (for hardware swaps).
	* Refactor Node:getSelectNodeUI().
	* Menu.php:  Fix small oversight causing menu not to clear.
	
2007-07-19 Benoit Grégoire  <bock@step.polymtl.ca>
	UIUserList fixes:
	* Node::getRecentUsers():  Get the 5 most recent users, not some random users in the last week.  Also, exclude users currently logged-in.
	* Node::getActiveUsers():  Function was unbearably slow, now limit the search space to the last 3 months.  Get the 5 user who connected on the most differents days, instead of users with the worst wireless card ;) 
	* schema_validate.php: Add index for timestamp_in on connection table.
	
2007-07-17 Benoit Grégoire  <bock@step.polymtl.ca>
	* Use last_heartbeat_sys_uptime untill #354 is fixed

2007-07-16  Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix display of wifidog uptime in node list